@@ -4,8 +4,10 @@ Jump Start Changelog
 2.0.2 - XX/XX/XXXX
 ------------------
 
+* Improvement: Better handling of svg icons in IE9/10.
 * Fixed: WooCommerce cart thumbnail sizing issue in Firefox.
 * Fixed: In executive base, standard header background elements were being outputted with Transparent header.
+* Fixed: Parallax background fallback not being horizontally centered in IE9.
 * Fixed: Added missing localization for theme bases admin page text.
 * Fixed: Live changelog link in theme options footer.
 
